--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "factorial-calculator",
-  "version": "1.3.0",
+  "version": "1.10.0",
   "description": "A function that calculates the factorial of a given \"n\" number",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "babel src -d lib"
   },
   "keywords": [
     "factorial"
   ],
   "author": "Gonzalo Vidal",
   "license": "ISC",
-  "engines": {
-    "node": ">=14.17.0"
-  },
-  "type": "module"
+  "devDependencies": {
+    "@babel/cli": "^7.21.0",
+    "@babel/core": "^7.21.4",
+    "@babel/preset-env": "^7.21.4"
+  }
 }
