--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "A function that calculates the factorial of a given \"n\" number",
   "main": "dist-node/index.js",
   "browser": "dist-browser/index.js",
+  "homepage": "https://github.com/gsvidal/factorial-calculator",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gsvidal/factorial-calculator"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-browser": "tsc src/index.ts --outDir dist-browser --module ES6",
